force-app/main/default/objects/Ambassador__c/Ambassador__c.object-meta.xml
<CustomObject>
    <label>Ambassador</label>
    <nameField>
        <label>Ambassador Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ambassadors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>