force-app/main/default/objects/Ambassador__c/fields/Admin__c.field-meta.xml
<CustomField>
    <fullName>Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin</label>
    <type>Checkbox</type>
</CustomField>