force-app/main/default/objects/Ambassador__c/fields/Ambassador_Email__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_Email__c</fullName>
    <label>Ambassador Email</label>
    <type>Email</type>
</CustomField>