force-app/main/default/objects/Ambassador__c/fields/Device_Id__c.field-meta.xml
<CustomField>
    <fullName>Device_Id__c</fullName>
    <label>Device Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>