force-app/main/default/objects/Ambassador__c/fields/Device_Token__c.field-meta.xml
<CustomField>
    <fullName>Device_Token__c</fullName>
    <label>Device Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>