force-app/main/default/objects/Ambassador__c/fields/OTP__c.field-meta.xml
<CustomField>
    <fullName>OTP__c</fullName>
    <label>Password</label>
    <length>6</length>
    <type>Text</type>
</CustomField>