force-app/main/default/objects/Ambassador__c/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <label>Roles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>President and CEO</fullName>
            </value>
            <value>
                <fullName>Chief Placemaking Officer</fullName>
            </value>
            <value>
                <fullName>Public Safety Manger</fullName>
            </value>
            <value>
                <fullName>Public Space Operations Manager</fullName>
            </value>
            <value>
                <fullName>Ranger Captain</fullName>
            </value>
            <value>
                <fullName>Chief Economic Development Officer</fullName>
            </value>
            <value>
                <fullName>Economic Development Specialist</fullName>
            </value>
            <value>
                <fullName>Chief Marketing Officer</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Communications Specialist</fullName>
            </value>
            <value>
                <fullName>Program Manager</fullName>
            </value>
            <value>
                <fullName>Assistant Manager</fullName>
            </value>
            <value>
                <fullName>Director of Public &amp; External Affairs</fullName>
            </value>
            <value>
                <fullName>District360</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>